# tradingAgents

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: functional-programming.mdc  jsdoc.mdc  package-managers.mdc  python-docs.mdc
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  db.py  main.py
frontend/: .dockerignore  Dockerfile
